--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -21,7 +21,10 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    
+    permissions:
+      contents: read
+      actions: read
+      issues: read
     steps:
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
